# qr-inclusivo

./: .gitignore  app.py  pyproject.toml  requirements.txt
static/audio/: readme.txt
static/js/: index.js
static/qr-codes/: readme.txt
templates/: base.html
